registry/registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/registry
          name: registry
      restartPolicy: Always
      volumes:
      - name: registry
        hostPath:
          path: /btrfs/data/volumes/default/registry
